Added CreatePerson and DeletePerson
